--- a/myApp/src/main/resources/application.yaml
+++ b/myApp/src/main/resources/application.yaml
@@ -19,4 +19,4 @@ telegram:
   bot:
     token: 7603284001:AAHNMfpZiqTB-Yzrfb3o2ft9yP7QNbU6soI
     userId: 6152427961
-    chatId: 6152427961
+    chatId: -4574816079
