--- a/my-app/package.json
+++ b/my-app/package.json
@@ -40,6 +40,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.14",
